<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bellman.myappportfolio.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:padding="10dp"
        android:gravity="center"/>

    <Button
        android:text="@string/popular_movies"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/my_color"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/button1" />
    <Button
        android:text="@string/stock_hawk"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/my_color"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />
    <Button
        android:text="@string/build_it_bigger"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/my_color"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/button3" />
    <Button
        android:text="@string/make_your_app_material"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/my_color"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/button4" />
    <Button
        android:text="@string/go_ubiquitous"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/my_color"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/button5" />
    <Button
        android:text="@string/capstone_my_own_app"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/my_color"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/button6" />
</LinearLayout>
